--- a/templates/product.single.album.liquid
+++ b/templates/product.single.album.liquid
@@ -209,7 +209,177 @@ SOFTWARE.
 <script src="https://unpkg.com/wavesurfer.js"></script>
 
 <script>
-  function addTrackToCart(variantId, trackId, e) {
+var singleAlbumPlayer = {
+  // Declare vars
+  links: document.querySelectorAll('#playlist a'),
+  currentTrack: 0,
+  currentTrackData: false,
+  hasLoaded: false,
+  wavesurfer: WaveSurfer.create({
+    container: '#waveform',
+    waveColor: 'rgba(255,255,255,.25)',
+    progressColor: 'white',
+    height: '60',
+    barHeight: '3',
+    barWidth: '3',
+    barRadius: 3,
+    cursorWidth: 1,
+    mediaControls: 'true',
+    responsive: true
+  }),
+
+  addEventListeners: function addEventListeners() {
+    var self = this;
+
+    // Transform URLs 
+    // Add play button event listeners
+    Array.prototype.forEach.call(this.links, function (link, index) { 
+    if(link.dataset.previewLink !== '') {
+      // set the actual preview link
+      $.ajax({
+        url: link.dataset.previewLink,
+        dataType: 'text',
+        type: 'GET',
+        success: function(previewURL) {
+          link.dataset.href = previewURL
+
+          var parentLink = link.parentElement
+          if(parentLink && parentLink.href) {
+            parentLink.href = previewURL
+          }
+
+          link.addEventListener('click', function (e) {
+            e.preventDefault();
+            self.setCurrentSong(index);
+          });
+
+          if(index == 0) {
+            // Load the first track
+            self.setCurrentSong(0);
+          }
+        },
+        error: function(XMLHttpRequest) {
+          console.log('Error playing track');
+        }
+      })
+    }
+  });
+
+    // playPause
+    document.querySelector('#playPause').addEventListener('click', function () {
+      self.wavesurfer.playPause();
+    });
+
+    // prev/next watchers
+    document.querySelector('.player-controls .prev').addEventListener('click', function() {
+      self.setCurrentSong((self.currentTrack - 1) <= 0 ? (self.links.length - 1) : (self.currentTrack - 1));
+    });
+
+    document.querySelector('.player-controls .next').addEventListener('click', function() {
+      self.setCurrentSong((self.currentTrack + 1) > (self.links.length - 1) ? 0 : (self.currentTrack + 1));
+    });
+
+    //add to cart watcher
+    document.querySelector('.single-footer-player .single-track-add-to-cart').addEventListener('click', function() {
+      self.addTrackToCart(self.currentTrackData.variantId, self.currentTrackData.trackId);
+    });
+  },
+
+  addWavesurferListeners: function addWavesurferListeners() {
+    var self = this;
+
+    // Toggle play/pause text
+    this.wavesurfer.on('play', function () {
+      document.querySelector('#play').style.display = 'none';
+      document.querySelector('#pause').style.display = '';
+
+      var playlistIcons = document.querySelectorAll('#playlist .single-play-icon i');
+      if(playlistIcons.length > 0) {
+        Array.prototype.forEach.call(playlistIcons, function (icon, index) {
+          icon.innerHTML = 'play_circle_outline';
+        });
+      }
+
+      var trackId = self.currentTrackData.trackId;
+      var playPauseInline = document.querySelector('[data-track-id="' + trackId + '"] .single-play-icon i')
+      if(playPauseInline) playPauseInline.innerHTML = 'pause_circle_outline'
+    });
+
+    this.wavesurfer.on('pause', function () {
+      document.querySelector('#play').style.display = 'block';
+      document.querySelector('#pause').style.display = 'none';
+
+      var playlistIcons = document.querySelectorAll('#playlist .single-play-icon i')
+      if(playlistIcons.length > 0) {
+        Array.prototype.forEach.call(playlistIcons, function (icon, index) {
+          icon.innerHTML = 'play_circle_outline';
+        });
+      }
+    });
+
+    // When wavesurfer loads a new track
+    this.wavesurfer.on('audioprocess', function() {
+      var totalTime = self.wavesurfer.getDuration(),
+          currentTime = self.wavesurfer.getCurrentTime();
+          
+      if (self.wavesurfer.isPlaying()) {
+        document.querySelector('.track-time .elapsed').innerHTML = self.toHHMMSS(currentTime);
+        document.querySelector('.track-time .remaining').innerHTML = self.toHHMMSS(totalTime);
+      }
+    });
+
+    // Update time on seek
+    this.wavesurfer.on('seek', function (position) {
+      document.querySelector('.track-time .elapsed').innerHTML = self.toHHMMSS(self.wavesurfer.getCurrentTime());
+    });
+    
+    // Play on audio load
+    this.wavesurfer.on('ready', function () {
+      if(self.hasLoaded) {
+        self.wavesurfer.play();
+      } else {
+        self.hasLoaded = true;
+      }
+
+      document.querySelector('.track-time .elapsed').innerHTML = '00:00';
+      document.querySelector('.track-time .remaining').innerHTML = self.toHHMMSS(self.wavesurfer.getDuration());
+    });
+
+    this.wavesurfer.on('error', function (e) {
+      console.warn(e);
+    });
+
+    // Go to the next track on finish
+    this.wavesurfer.on('finish', function () {
+      self.setCurrentSong((self.currentTrack + 1) % self.links.length);
+    });
+  },
+
+  setCurrentSong: function setCurrentSong(index) {
+    if(index != this.currentTrack || !this.hasLoaded) {
+      this.links[this.currentTrack].classList.remove('active');
+      
+      this.currentTrack = index;
+      this.currentTrackData = this.links[this.currentTrack].dataset;
+
+      var atcButtonIcon = document.querySelector('.single-footer-player .single-track-add-to-cart .single-track-btn')
+      atcButtonIcon.innerHTML = '<i class="material-icons single-add-track-to-cart-icon-' + this.currentTrackData.trackId + '">add_shopping_cart</i><span>$0.99</span>';
+
+      this.links[this.currentTrack].classList.add('active');
+      
+      document.querySelector('.track-title').innerHTML = this.currentTrackData.title;
+      document.querySelector('.track-artist').innerHTML = this.currentTrackData.artist;
+      document.querySelector('.track-tuning').innerHTML = this.currentTrackData.tuning;
+      document.querySelector('.track-bpm').innerHTML = this.currentTrackData.bpm;
+      
+      this.wavesurfer.load(this.currentTrackData.href);
+    } else {
+      this.wavesurfer.playPause();
+    }
+  },
+
+  // Add track to cart
+  addTrackToCart: function addTrackToCart(variantId, trackId, e) {
     if(e) { e.preventDefault(); e.stopPropagation(); }
 
     $.post('/cart/add.json', { quantity: 1, id: variantId },
@@ -232,9 +402,10 @@ SOFTWARE.
         {% comment %} // This happens if track fails to add. --> {% endcomment %}
         alert('Failed to add track to cart!');
       });
-  }
+  },
 
-  function toHHMMSS(secs) {
+  // Format time
+  toHHMMSS: function toHHMMSS(secs) {
     var sec_num = parseInt(secs, 10)
     var hours   = Math.floor(sec_num / 3600)
     var minutes = Math.floor(sec_num / 60) % 60
@@ -244,168 +415,15 @@ SOFTWARE.
         .map(v => v < 10 ? "0" + v : v)
         .filter((v,i) => v !== "00" || i > 0)
         .join(":")
+  },
+
+  init: function() {
+    this.addEventListeners()
+    this.addWavesurferListeners()
   }
+}
 
-  // Init on DOM ready
-  document.addEventListener('DOMContentLoaded', function () {
-    // Create a WaveSurfer instance
-    var wavesurfer;
-    var hasLoaded = false;
-
-    // Global vars
-    var getPreviewURL = getPreviewURL || function() {};
-    var links = document.querySelectorAll('#playlist a');
-    var currentTrack = 0;
-    var currentTrackData = false;
-
-    wavesurfer = WaveSurfer.create({
-      container: '#waveform',
-      waveColor: 'rgba(255,255,255,.25)',
-      progressColor: 'white',
-      height: '60',
-      barHeight: '3',
-      barWidth: '3',
-      barRadius: 3,
-      cursorWidth: 1,
-      mediaControls: 'true',
-      responsive: true
-    });
-
-    // Bind controls
-    let playPause = document.querySelector('#playPause');
-    playPause.addEventListener('click', function () {
-      wavesurfer.playPause();
-    });
-
-    // Toggle play/pause text
-    wavesurfer.on('play', function () {
-      document.querySelector('#play').style.display = 'none';
-      document.querySelector('#pause').style.display = '';
-
-      var playlistIcons = document.querySelectorAll('#playlist .single-play-icon i')
-      if(playlistIcons.length > 0) {
-        Array.prototype.forEach.call(playlistIcons, function (icon, index) {
-          icon.innerHTML = 'play_circle_outline';
-        });
-      }
-
-      var trackId = currentTrackData.trackId;
-      var playPauseInline = document.querySelector('[data-track-id="' + trackId + '"] .single-play-icon i')
-      if(playPauseInline) playPauseInline.innerHTML = 'pause_circle_outline'
-    });
-
-    wavesurfer.on('pause', function () {
-      document.querySelector('#play').style.display = 'block';
-      document.querySelector('#pause').style.display = 'none';
-
-      var playlistIcons = document.querySelectorAll('#playlist .single-play-icon i')
-      if(playlistIcons.length > 0) {
-        Array.prototype.forEach.call(playlistIcons, function (icon, index) {
-          icon.innerHTML = 'play_circle_outline';
-        });
-      }
-    });
-
-    wavesurfer.on('audioprocess', function() {
-      var totalTime = wavesurfer.getDuration(),
-          currentTime = wavesurfer.getCurrentTime();
-          
-      if (wavesurfer.isPlaying()) {
-        document.querySelector('.track-time .elapsed').innerHTML = toHHMMSS(currentTime);
-        document.querySelector('.track-time .remaining').innerHTML = toHHMMSS(totalTime);
-      }
-    });
-
-    wavesurfer.on('seek', function (position) {
-      document.querySelector('.track-time .elapsed').innerHTML = toHHMMSS(wavesurfer.getCurrentTime());
-    });
-
-    // Load a track by index and highlight the corresponding link
-    function setCurrentSong(index) {
-      if(index != currentTrack || !hasLoaded) {
-        links[currentTrack].classList.remove('active');
-        
-        currentTrack = index;
-        currentTrackData = links[currentTrack].dataset;
-
-        var atcButtonIcon = document.querySelector('.single-footer-player .single-track-add-to-cart .single-track-btn')
-        atcButtonIcon.innerHTML = '<i class="material-icons single-add-track-to-cart-icon-' + currentTrackData.trackId + '">add_shopping_cart</i><span>$0.99</span>';
-  
-        links[currentTrack].classList.add('active');
-        
-        document.querySelector('.track-title').innerHTML = currentTrackData.title;
-        document.querySelector('.track-artist').innerHTML = currentTrackData.artist;
-        document.querySelector('.track-tuning').innerHTML = currentTrackData.tuning;
-        document.querySelector('.track-bpm').innerHTML = currentTrackData.bpm;
-        
-        wavesurfer.load(currentTrackData.href);
-      } else {
-        wavesurfer.playPause();
-      }
-    };
-
-    Array.prototype.forEach.call(links, function (link, index) { 
-      if(link.dataset.previewLink !== '') {
-        // set the actual preview link
-        $.ajax({
-          url: link.dataset.previewLink,
-          dataType: 'text',
-          type: 'GET',
-          success: function(previewURL) {
-            link.dataset.href = previewURL
-  
-            link.addEventListener('click', function (e) {
-              e.preventDefault();
-              setCurrentSong(index);
-            });
-  
-            if(index == 0) {
-              // Load the first track
-              setCurrentSong(0);
-            }
-          },
-          error: function(XMLHttpRequest) {
-            console.log('Error playing track');
-          }
-        })
-      }
-    });
-
-    // Play on audio load
-    wavesurfer.on('ready', function () {
-      if(hasLoaded) {
-        wavesurfer.play();
-      } else {
-        hasLoaded = true;
-      }
-
-      document.querySelector('.track-time .elapsed').innerHTML = '00:00';
-      document.querySelector('.track-time .remaining').innerHTML = toHHMMSS(wavesurfer.getDuration());
-    });
-
-    wavesurfer.on('error', function (e) {
-      console.warn(e);
-    });
-
-    // Go to the next track on finish
-    wavesurfer.on('finish', function () {
-      setCurrentSong((currentTrack + 1) % links.length);
-    });
-
-    // prev/next watchers
-    document.querySelector('.player-controls .prev').addEventListener('click', function() {
-      setCurrentSong((currentTrack - 1) <= 0 ? (links.length - 1) : (currentTrack - 1));
-    });
-
-    document.querySelector('.player-controls .next').addEventListener('click', function() {
-      setCurrentSong((currentTrack + 1) > (links.length - 1) ? 0 : (currentTrack + 1));
-    });
-
-    //add to cart watcher
-    document.querySelector('.single-footer-player .single-track-add-to-cart').addEventListener('click', function() {
-      addTrackToCart(currentTrackData.variantId, currentTrackData.trackId);
-    });
-  });
+singleAlbumPlayer.init()
 </script>
 
 {% include 'single-ajaxify-album' %}
