--- a/templates/product.single.album.liquid
+++ b/templates/product.single.album.liquid
@@ -115,7 +115,7 @@ SOFTWARE.
             data-preview-link="{{ previewLink | escape }}"
             data-tuning="{{ tuning | escape }}"
             data-bpm="{{ bpm | escape }}"
-            data-title="{{ product.title | escape }}"
+            data-title="{{ track.title | escape }}"
             data-artist="{{ product.metafields.album.artist_name | escape }}"
           >
             <i class="material-icons">play_circle_outline</i>
