--- a/snippets/single-track.liquid
+++ b/snippets/single-track.liquid
@@ -51,7 +51,7 @@ SOFTWARE.
   data-preview-link="{{ previewLink | escape }}"
   data-tuning="{{ tuning | escape }}"
   data-bpm="{{ bpm | escape }}"
-  data-title="{{ track.title | escape }}"
+  data-title="{% if track.metafields.track.featured_artist_names %}{{ track.title }} (feat. {{track.metafields.track.featured_artist_names}}){% else %}{{ track.title | escape }}{% endif %}"
   data-artist="{{ product.metafields.album.artist_name | escape }}"
 >
 
@@ -63,7 +63,7 @@ SOFTWARE.
     data-preview-link="{{ previewLink | escape }}"
     data-tuning="{{ tuning | escape }}"
     data-bpm="{{ bpm | escape }}"
-    data-title="{{ track.title | escape }}"
+    data-title="{% if track.metafields.track.featured_artist_names %}{{ track.title }} (feat. {{track.metafields.track.featured_artist_names}}){% else %}{{ track.title | escape }}{% endif %}"
     data-artist="{{ product.metafields.album.artist_name | escape }}"
   >
     {% if trackOnSale == "true" and previewAvailable == "true" %}
@@ -81,7 +81,7 @@ SOFTWARE.
     {% endif %}
   </div>
 
-  {% if trackOnSale == "true" %}
+  {% if trackOnSale == "true" and previewAvailable == "true" %}
   <div class="single-track-time">
       {{trackTime}}
   </div>
