Single player prices in footer; tap target for individual atc; code cleanup

--- a/snippets/single-footer-player.liquid
+++ b/snippets/single-footer-player.liquid
@@ -177,7 +177,7 @@
     </div>
 
     <div class="track-purchase">
-      <div class="single-track-add-to-cart">
+      <div class="single-track-add-to-cart single-footer-add-to-cart">
         <div class="single-track-btn">
           <i class="material-icons">add_shopping_cart</i>
           <span>$0.99</span>
